2005-09-04  David Bateman <dbateman@free.fr>

	* DLD-FUNCTIONS/colamd.c (COLAMD_NAME, SYMAMD_NAME): New macros
	(symetree, make_set, link, finf, etdfs, TreePostorder, coletree,
	Fcolamd, Fsymamd, Fetree): Update for 64-bit indexing and colamd
	versin 2.4.

2005-09-01  John W. Eaton  <jwe@octave.org>

	* variables.cc (symbol_out_of_date): Don't check nested functions.

2005-08-31  John W. Eaton  <jwe@octave.org>

	* oct-map.cc (Octave_map::index): Don't crash if index list is empty.
	* ov-str-mat.cc (octave_char_matrix_str::do_index_op_internal):
	Likewise. 

	* oct-map.h (Octave_map::ndims): New function.

2005-08-30  John W. Eaton  <jwe@octave.org>

	* ov-range.h (octave_range::permute): New function.

	* ov-struct.cc (octave_struct::load_ascii,
	octave_struct::load_binary, octave_struct::load_hdf5): Try harder
	to read old-style files correctly.

2005-08-25  David Bateman <dbateman@free.fr>

        * OPERATORS/op-sm-m.cc, OPERATORS/op-sm-cm.cc, OPERATORS/op-scm-m.cc,
	OPERATORS/op-scm-cm.cc, OPERATORS/op-m-sm.cc, OPERATORS/op-m-scm.cc,
	OPERATORS/op-cm-sm.cc, OPERATORS/op-cm-scm.cc: Use mixed matrix/sparse
	multiply operator rather than casting sparse to matrix.

2005-07-18  John W. Eaton  <jwe@octave.org>

	* strfns.cc (Fstrcmp): New function from Soren Hauberg
	<soren@hauberg.org> and Tom Holroyd <tomh@kurage.nimh.nih.gov>.
	Adapt to Octave conventions.

2005-07-11  David Bateman  <dbateman@free.fr>

	* ov-fc-inline.cc (Fvectorize): Allow string arguments

2005-07-08  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/gplot.l (Fhold, Fishold): Delete.
	(clear_before_plotting): Delete static variable.
	Delete PKG_ADD line for hold.

2005-07-07  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (pr_plus_format): Delete "static" from template decl.

	* oct-stream.cc (octave_scan): Delete explicit instantiation of
	octave_scan<double> since a specialization is provided.

	* DLD-FUNCTIONS/matrix_type.cc (Fmatrix_type): Include