@@ -1,3 +1,12 @@
+2005-09-07  Bill Denney  <denney@seas.upenn.edu>
+
+	* dirfns.cc (Fglob): Doc fix.
+
+2005-09-07  John W. Eaton  <jwe@octave.org>
+
+	* ov-struct.cc (Fstruct): Allow struct (zeros (0, N)) to create a
+	0xN struct array.
+
 2005-09-04  David Bateman <dbateman@free.fr>
 
 	* DLD-FUNCTIONS/colamd.c (COLAMD_NAME, SYMAMD_NAME): New macros
